Fix: promotion title color in dark mode

--- a/assets/scss/editor.scss
+++ b/assets/scss/editor.scss
@@ -22,13 +22,13 @@
 		.elementor-nerd-box-title {
 			margin: 24px 0 0;
 			font-size: 16px;
-			color: #6d7882;
+			/*color: #6d7882;*/
 		}
 
 		.elementor-nerd-box-message {
 			margin: 12px 0 0;
 			font-size: 11px;
-			color: #6d7882;
+			/*color: #6d7882;*/
 		}
 	}
 
